--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin Landing Page</title>
+    <title>Tutors Inc.</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="header">
         <div class="logo">
-            <img src="--" alt="Odin Logo">
+            <img src="https://us.123rf.com/450wm/butenkov/butenkov2009/butenkov200900010/180572410-vector-logo-of-a-tutor-educational-courses.jpg?ver=6" alt="Odin Logo" width="70">
         </div>
         <div class="links">
             <a href="#">Home</a>
@@ -19,42 +20,42 @@
 
     <div class="header-2">
         <div class="container-1">
-            <h1>Odin</h1>
-            <p>Odin is a landing page template for your business. It is designed to help you grow your business and increase your sales. It is easy to use and customize. It is built with HTML, CSS, and JavaScript. It is fully responsive and works on all devices.</p>
+            <h1>Learning Made <em>Easy</em></h1>
+            <p>Meeting a good tutor will change your life. Cultivate a love for learning and knowledge with our expert tutors!</p>
             <button>Get Started</button>
         </div>
-        <img src="--" alt="Odin Image">
+        <img src="https://media.istockphoto.com/id/1307457391/photo/happy-black-student-raising-arm-to-answer-question-while-attending-class-with-her-university.jpg?s=612x612&w=0&k=20&c=iZaZFyC-WqlqSQc4elqUNPTxLvWPe8P5Tb_YdZnrI9Q=" alt="Classroom Image" width="300">
     </div>
 
-    <h2>Teacher List</h2>
+    <h2>Meet the Team!</h2>
     <div class="container-2">
         <div class="card-1">
-            <img src="--" alt="Teacher Image">
-            <p>Math Teacher</p>
+            <img src="https://i.fbcd.co/products/resized/resized-750-500/1806-m10-i002-n009-e06p-91a842e4e10f8d9d10795231b8f778bee243808b34e3409ad18e05a7bc04cae6.jpg" alt="Teacher Image" width="200">
+            <p>Math Tutor</p>
         </div>
         <div class="card-2">
-            <img src="--" alt="Teacher Image">
-            <p>Science Teacher</p>
+            <img src="https://i.fbcd.co/products/resized/resized-750-500/1806-m10-i002-n009-e06p-91a842e4e10f8d9d10795231b8f778bee243808b34e3409ad18e05a7bc04cae6.jpg" alt="Teacher Image" width="200">
+            <p>Science Tutor</p>
         </div>
         <div class="card-3">
-            <img src="--" alt="Teacher Image">
-            <p>English Teacher</p>
+            <img src="https://i.fbcd.co/products/resized/resized-750-500/1806-m10-i002-n009-e06p-91a842e4e10f8d9d10795231b8f778bee243808b34e3409ad18e05a7bc04cae6.jpg" alt="Teacher Image" width="200">
+            <p>English Tutor</p>
         </div>
         <div class="card-4">
-            <img src="--" alt="Teacher Image">
-            <p>Social Studies Teacher</p>
+            <img src="https://i.fbcd.co/products/resized/resized-750-500/1806-m10-i002-n009-e06p-91a842e4e10f8d9d10795231b8f778bee243808b34e3409ad18e05a7bc04cae6.jpg" alt="Teacher Image" width="200">
+            <p>Social Studies Tutor</p>
         </div>
     </div>
 
-    <h1 class="quote">"Education is the most powerful weapon which you can use to change the world."</h1>
+    <h2 class="quote">"Education is the most powerful weapon which you can use to change the world."</h2>
     <p class="author">- Nelson Mandela</p>
 
     <div class="container-3">
         <div class="action-call">
-            <h5>Action Call</h5>
-            <p>Odin is a landing page template for your business.</p>
+            <h4>Now is the time!</h4>
+            <p>Don't miss out on our back-to-school discount!</p>
         </div>
-        <button>Sign up</button>   
+        <button>Sign Up</button>   
     </div>
 </body>
 </html>
