--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         </div>
     </div>
 
-    <h2 class="quote">"Education is the most powerful weapon which you can use to change the world."</h2>
-    <p class="author">- Nelson Mandela</p>
+    <p class="quote">"Nelson Mandela once said that education is the most powerful weapon which you can use to change the world. Working one-on-one with Tutors Inc. has been the most empowering experience of my life. It will change you forever!"</p>
+    <p class="author">- Audrey, Class of 2025</p>
 
     <div class="container-3">
         <div class="action-call">
