--- a/index.html
+++ b/index.html
@@ -57,5 +57,7 @@
         </div>
         <button>Sign Up</button>   
     </div>
+
+    <p class="footer">© 2021 Tutors Inc. All Rights Reserved.</p>
 </body>
 </html>
