Style "Meet the Team"

--- a/index.html
+++ b/index.html
@@ -24,26 +24,26 @@
             <p>Meeting a good tutor will change your life. Cultivate a love for learning and knowledge with our expert tutors!</p>
             <button>Get Started</button>
         </div>
-        <img src="https://media.istockphoto.com/id/1307457391/photo/happy-black-student-raising-arm-to-answer-question-while-attending-class-with-her-university.jpg?s=612x612&w=0&k=20&c=iZaZFyC-WqlqSQc4elqUNPTxLvWPe8P5Tb_YdZnrI9Q=" alt="Classroom Image" width="300">
+        <img class="classroom" src="https://media.istockphoto.com/id/1307457391/photo/happy-black-student-raising-arm-to-answer-question-while-attending-class-with-her-university.jpg?s=612x612&w=0&k=20&c=iZaZFyC-WqlqSQc4elqUNPTxLvWPe8P5Tb_YdZnrI9Q=" alt="Classroom Image" width="300">
     </div>
 
     <h2>Meet the Team!</h2>
     <div class="container-2">
-        <div class="card-1">
+        <div class="card">
             <img src="https://i.fbcd.co/products/resized/resized-750-500/1806-m10-i002-n009-e06p-91a842e4e10f8d9d10795231b8f778bee243808b34e3409ad18e05a7bc04cae6.jpg" alt="Teacher Image" width="200">
-            <p>Math Tutor</p>
+            <p id="tutor">Math Tutor</p>
         </div>
-        <div class="card-2">
+        <div class="card">
             <img src="https://i.fbcd.co/products/resized/resized-750-500/1806-m10-i002-n009-e06p-91a842e4e10f8d9d10795231b8f778bee243808b34e3409ad18e05a7bc04cae6.jpg" alt="Teacher Image" width="200">
-            <p>Science Tutor</p>
+            <p id="tutor">Science Tutor</p>
         </div>
-        <div class="card-3">
+        <div class="card">
             <img src="https://i.fbcd.co/products/resized/resized-750-500/1806-m10-i002-n009-e06p-91a842e4e10f8d9d10795231b8f778bee243808b34e3409ad18e05a7bc04cae6.jpg" alt="Teacher Image" width="200">
-            <p>English Tutor</p>
+            <p id="tutor">English Tutor</p>
         </div>
-        <div class="card-4">
+        <div class="card">
             <img src="https://i.fbcd.co/products/resized/resized-750-500/1806-m10-i002-n009-e06p-91a842e4e10f8d9d10795231b8f778bee243808b34e3409ad18e05a7bc04cae6.jpg" alt="Teacher Image" width="200">
-            <p>Social Studies Tutor</p>
+            <p id="tutor">Social Studies Tutor</p>
         </div>
     </div>
 
