Style call to action

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div class="container-3">
         <div class="action-call">
             <h4>Now is the time!</h4>
-            <p>Don't miss out on our back-to-school discount!</p>
+            <p id="call">Don't miss out on our back-to-school discount!</p>
         </div>
         <button>Sign Up</button>   
     </div>
