--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="header">
         <div class="logo">
-            <img id="classroom" src="https://us.123rf.com/450wm/butenkov/butenkov2009/butenkov200900010/180572410-vector-logo-of-a-tutor-educational-courses.jpg?ver=6" alt="Odin Logo" width="50">
+            <img src="https://us.123rf.com/450wm/butenkov/butenkov2009/butenkov200900010/180572410-vector-logo-of-a-tutor-educational-courses.jpg?ver=6" alt="Odin Logo" width="50">
         </div>
         <div class="links">
             <a href="#">Home</a>
